--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@ body {
     align-items: center;
     height: 100vh;
     margin: 0;
-    background-color: #f0f0f0;
+    background-color: #efecdb;
     font-family: 'Inter', sans-serif;
 }
 
@@ -14,6 +14,7 @@ body {
 
 h1 {
     font-size: 4.5rem;
+    color: #8c1837;
     font-weight: 600; /* You can change this to 300, 600, or 700 as needed */
     opacity: 0;
     transition: opacity 1s ease-in-out;
