--- a/styles.css
+++ b/styles.css
@@ -44,9 +44,11 @@ h1 {
 
 @media (max-width: 600px) {
     h1 {
+        font-family: 'Inter', sans-serif;
         font-size: 3rem;
     }
     .continue-button {
+        font-family: 'Inter', sans-serif;
         font-size: 1.4rem;
         padding: 8px 15px; /* Adjusted padding for better fit on small screens */
         margin-top: 80px; /* Adjusted space for smaller screens */
