--- a/embryo/styles.css
+++ b/embryo/styles.css
@@ -14,16 +14,16 @@ body, html {
 }
 
 #layer1 {
-    background-image: url('your-background-image-1.jpg');
+    background-image: url('Embryo_parallax_BG.jpg');
     z-index: 1;
 }
 
 #layer2 {
-    background-image: url('your-background-image-2.jpg');
+    background-image: url('Embryo_parallax_MG.png');
     z-index: 2;
 }
 
 #layer3 {
-    background-image: url('your-background-image-3.jpg');
+    background-image: url('Embryo_parallax_FG.jpg');
     z-index: 3;
 }
