--- a/embryo/styles.css
+++ b/embryo/styles.css
@@ -24,7 +24,8 @@ body {
     left: 50%;
     transform: translateX(-50%); /* Center align */
     font-weight: 600; /* Font weight */
-    font-size: 2rem; /* Font size */
+    font-size: 2.5rem; /* Font size */
+    letter-spacing: -0.5px; /* Letter spacing */
     color: white; /* Text color */
     z-index: 2; /* Above the background */
     text-align: center; /* Center text */
