--- a/embryo/styles.css
+++ b/embryo/styles.css
@@ -44,7 +44,7 @@ body {
 /* Customized dropdown menu styles */
 .language-dropdown {
     position: absolute;
-    top: 50vh; /* Adjust position as needed */
+    top: 65vh; /* Adjust position as needed */
     left: 50%;
     transform: translateX(-50%); /* Center align */
     z-index: 2; /* Above the background */
@@ -58,13 +58,13 @@ body {
     border: none; /* Remove default border */
     appearance: none; /* Remove default styling */
     cursor: pointer; /* Change cursor to pointer */
-    text-align: center; /* Center align the text in the dropdown menu
+    text-align: center; /* Center align the text in the dropdown menu */
 }
 
 /* Audio player styles */
 .audio-player {
     position: absolute;
-    top: 65vh; /* Adjust position as needed */
+    top: 75vh; /* Adjust position as needed */
     left: 50%;
     transform: translateX(-50%); /* Center align */
     z-index: 2; /* Above the background */
