--- a/embryo/styles.css
+++ b/embryo/styles.css
@@ -12,7 +12,8 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: url('Embryo_parallax-BG.jpg'); /* Background image */
+    /* background-image: url('Embryo_parallax-BG.jpg'); */
+    background-color: #000211; /* Background color */
     background-size: cover; /* Cover the entire viewport */
     background-position: center; /* Center the image */
     z-index: 1; /* Ensure it stays behind other content */
